Closed
Bug 1401230
Opened 8 years ago
Closed 8 years ago
Firefox built with LLVM and --coverage terminates with a segmentation fault
Categories
(Testing :: Code Coverage, defect)
Tracking
(firefox58 fixed)
RESOLVED
FIXED
mozilla58
Tracking | Status | |
---|---|---|
firefox58 | --- | fixed |
People
(Reporter: marco, Assigned: marco)
References
Details
Attachments
(1 file)
5.56 KB,
patch
|
glandium
:
review+
|
Details | Diff | Splinter Review |
Firefox shutdown seems to take a lot and in the end it terminates with a segmentation fault.
Assignee | ||
Comment 1•8 years ago
|
||
Backtrace of the segmentation fault:
#0 0x00007fff30a3a540 in ()
#1 0x0000000000449794 in llvm_writeout_files ()
#2 0x00007ffff6d80270 in __run_exit_handlers (status=0, listp=0x7ffff71075d8 <__exit_funcs>, run_list_atexit=run_list_atexit@entry=true, run_dtors=run_dtors@entry=true)
at exit.c:83
#3 0x00007ffff6d802ca in __GI_exit (status=<optimized out>) at exit.c:105
#4 0x00007ffff6d663f8 in __libc_start_main (main=
0x405f8d <main(int, char**, char**)>, argc=4, argv=0x7fffffffd188, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffffffd178)
at ../csu/libc-start.c:325
#5 0x0000000000405dba in _start () at /home/marco/Documenti/FD/mozilla-unified/browser/app/nsBrowserApp.cpp:167
I see something similar was reported at https://bugs.llvm.org/show_bug.cgi?id=20530.
Assignee | ||
Updated•8 years ago
|
Summary: Firefox built with LLVM and --coverage often terminates with a segmentation fault → Firefox built with LLVM and --coverage terminates with a segmentation fault
Assignee | ||
Comment 2•8 years ago
|
||
Also relevant: https://bugs.llvm.org/show_bug.cgi?id=27224.
Assignee | ||
Comment 3•8 years ago
|
||
It looks like the patch from https://bugs.llvm.org/show_bug.cgi?id=27224 is fixing the segfault: https://treeherder.mozilla.org/#/jobs?repo=try&revision=3d3f50c2a1afb1bd2473cf39765f64f74b2eeb07 (there are still failures, but due to other reasons).
I guess we can apply the patch ourselves (like I did in that try build, https://hg.mozilla.org/try/rev/8bef1bae51084b3de0e5990d1c7e61f3dd1f194d) until it is fixed upstream?
Can we ask someone from LLVM to review that patch?
Assignee | ||
Comment 4•8 years ago
|
||
Assignee: nobody → mcastelluccio
Status: NEW → ASSIGNED
Attachment #8910538 -
Flags: review?(mh+mozilla)
Comment 5•8 years ago
|
||
Comment on attachment 8910538 [details] [diff] [review]
Patch
Review of attachment 8910538 [details] [diff] [review]:
-----------------------------------------------------------------
This should definitely be upstreamed.
Attachment #8910538 -
Flags: review?(mh+mozilla) → review+
Comment 6•8 years ago
|
||
Did it here:
https://reviews.llvm.org/D38124
I will follow up to see that merged for 5.0.1 too
Pushed by mcastelluccio@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/3e2e23967690
Apply compiler-rt patch to avoid crashes on shutdown when unloading shared libraries. r=glandium
Comment 8•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox58:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Pushed by mcastelluccio@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8e1f206379fb
Apply compiler-rt patch to hide gcda symbols on Windows too. r=glandium
Comment 10•8 years ago
|
||
bugherder |
You need to log in
before you can comment on or make changes to this bug.
Description
•